--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -972,6 +972,7 @@ allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.153.248.33;
 allow 23.153.248.34;
+allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
@@ -998,6 +999,7 @@ allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.8.104;
 allow 23.184.48.254;
+allow 23.184.48.78;
 allow 23.191.200.2;
 allow 23.191.200.3;
 allow 23.191.200.4;
@@ -1039,6 +1041,7 @@ allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
 allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
@@ -1603,6 +1606,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
 allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
+allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc0:0:d::d927;
