--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -972,6 +972,7 @@ deny 23.137.253.27;
 deny 23.137.254.137;
 deny 23.153.248.33;
 deny 23.153.248.34;
+deny 23.154.177.10;
 deny 23.154.177.11;
 deny 23.154.177.12;
 deny 23.154.177.13;
@@ -998,6 +999,7 @@ deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.8.104;
 deny 23.184.48.254;
+deny 23.184.48.78;
 deny 23.191.200.2;
 deny 23.191.200.3;
 deny 23.191.200.4;
@@ -1039,6 +1041,7 @@ deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:9fef::1;
 deny 2602:fc24:12:a679::1;
+deny 2602:fc24:18:f38f::1;
 deny 2602:fc24:18:f84a::1;
 deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:2b4::1;
@@ -1603,6 +1606,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:38;
 deny 2a0e:4005:1002:ffff:185:40:4:44;
 deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
+deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc0:0:8::a84e;
 deny 2a0e:bfc0:0:d::d927;
