--- a/set_real_ip_from-tor_ips_v4.conf
+++ b/set_real_ip_from-tor_ips_v4.conf
@@ -859,6 +859,7 @@ set_real_ip_from 23.137.253.27;
 set_real_ip_from 23.137.254.137;
 set_real_ip_from 23.153.248.33;
 set_real_ip_from 23.153.248.34;
+set_real_ip_from 23.154.177.10;
 set_real_ip_from 23.154.177.11;
 set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
@@ -885,6 +886,7 @@ set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.254;
+set_real_ip_from 23.184.48.78;
 set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.3;
 set_real_ip_from 23.191.200.4;
