--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -197,7 +197,6 @@ allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.73.242.163;
-allow 166.1.22.139;
 allow 166.70.207.2;
 allow 171.25.193.20;
 allow 171.25.193.234;
@@ -244,7 +243,8 @@ allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.96;
-allow 178.29.168.188;
+allow 178.218.144.99;
+allow 178.30.193.17;
 allow 179.35.5.78;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -686,7 +686,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.144.178.185;
 allow 198.144.178.187;
-allow 198.167.206.166;
+allow 198.167.206.227;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -1129,7 +1129,6 @@ allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:1d1::100;
 allow 2605:aa80:0:9::3;
-allow 2605:e440:2::1:36e;
 allow 2607:5300:120:c74::1;
 allow 2607:5300:201:3100::35c5;
 allow 2607:5300:205:200::4894;
@@ -1240,6 +1239,7 @@ allow 2800:ba0:6:c1::4858;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1575,6 +1575,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1004::a2;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
@@ -1710,6 +1711,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1821,6 +1823,7 @@ allow 5.255.101.131;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
+allow 5.255.112.235;
 allow 5.255.114.171;
 allow 5.255.115.58;
 allow 5.255.117.56;
@@ -1903,6 +1906,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 88.151.117.146;
 allow 88.80.20.86;
 allow 88.80.26.2;
