--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -24,19 +24,26 @@ allow 104.219.236.100;
 allow 104.244.72.115;
 allow 104.244.72.132;
 allow 104.244.73.136;
+allow 104.244.73.177;
 allow 104.244.73.190;
 allow 104.244.73.193;
 allow 104.244.73.43;
+allow 104.244.74.173;
 allow 104.244.74.229;
 allow 104.244.74.23;
 allow 104.244.74.97;
 allow 104.244.75.140;
 allow 104.244.75.74;
+allow 104.244.76.110;
 allow 104.244.76.237;
 allow 104.244.77.208;
+allow 104.244.77.210;
+allow 104.244.78.132;
 allow 104.244.78.162;
 allow 104.244.78.232;
 allow 104.244.78.233;
+allow 104.244.78.26;
+allow 104.244.79.236;
 allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
@@ -54,15 +61,20 @@ allow 107.174.45.55;
 allow 107.174.83.58;
 allow 107.175.31.193;
 allow 107.189.10.175;
+allow 107.189.10.20;
 allow 107.189.11.111;
 allow 107.189.11.113;
 allow 107.189.1.160;
 allow 107.189.1.175;
+allow 107.189.12.194;
+allow 107.189.12.24;
 allow 107.189.1.228;
 allow 107.189.12.3;
+allow 107.189.12.58;
 allow 107.189.12.7;
 allow 107.189.12.88;
 allow 107.189.13.180;
+allow 107.189.13.212;
 allow 107.189.13.251;
 allow 107.189.13.253;
 allow 107.189.13.254;
@@ -81,22 +93,27 @@ allow 107.189.30.86;
 allow 107.189.3.11;
 allow 107.189.31.232;
 allow 107.189.31.33;
+allow 107.189.3.171;
 allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
 allow 107.189.5.249;
+allow 107.189.5.37;
 allow 107.189.5.7;
+allow 107.189.5.9;
 allow 107.189.6.124;
 allow 107.189.7.141;
 allow 107.189.7.144;
 allow 107.189.7.168;
 allow 107.189.7.227;
+allow 107.189.7.92;
 allow 107.189.8.133;
 allow 107.189.8.136;
 allow 107.189.8.181;
 allow 107.189.8.226;
 allow 107.189.8.238;
+allow 107.189.8.240;
 allow 107.189.8.5;
 allow 107.189.8.56;
 allow 107.189.8.65;
@@ -126,7 +143,6 @@ allow 109.70.100.70;
 allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.35.245.150;
-allow 118.15.7.171;
 allow 118.163.74.160;
 allow 121.127.37.151;
 allow 121.78.28.166;
@@ -244,7 +260,7 @@ allow 178.218.144.18;
 allow 178.218.144.51;
 allow 178.218.144.96;
 allow 178.218.144.99;
-allow 178.30.193.17;
+allow 178.30.200.228;
 allow 179.35.5.78;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -1000,6 +1016,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.8.104;
+allow 23.184.48.13;
 allow 23.184.48.254;
 allow 23.184.48.78;
 allow 23.191.200.2;
@@ -1043,6 +1060,7 @@ allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
+allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:18:f84a::1;
 allow 2602:fc24:19:1c9::1;
@@ -1261,7 +1279,6 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e01::f03c:95ff:fe64:90e3;
 allow 2a02:16d0:0:5::1;
-allow 2a02:2970:1001::4b;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1576,7 +1593,6 @@ allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:4a9a::1;
-allow 2a0d:bbc7:0:1004::a2;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1772,7 +1788,6 @@ allow 45.83.104.137;
 allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.128;
-allow 45.84.107.140;
 allow 45.84.107.17;
 allow 45.84.107.172;
 allow 45.84.107.182;
@@ -1793,7 +1808,6 @@ allow 45.95.169.130;
 allow 45.95.169.230;
 allow 45.95.169.255;
 allow 46.165.243.36;
-allow 46.182.21.248;
 allow 46.23.109.25;
 allow 46.232.251.191;
 allow 46.234.47.105;
@@ -1917,7 +1931,6 @@ allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
 allow 89.147.111.87;
-allow 89.213.104.133;
 allow 89.221.215.139;
 allow 89.221.217.206;
 allow 89.234.157.254;
@@ -1938,7 +1951,6 @@ allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
-allow 91.229.239.28;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
