--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -177,6 +177,7 @@ allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
+allow 152.32.199.79;
 allow 152.53.133.14;
 allow 152.53.53.243;
 allow 154.16.116.61;
@@ -249,6 +250,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.143.138;
 allow 176.97.114.202;
+allow 177.149.142.75;
 allow 178.162.197.91;
 allow 178.17.170.144;
 allow 178.17.171.102;
@@ -262,7 +264,6 @@ allow 178.218.144.51;
 allow 178.218.144.96;
 allow 178.218.144.99;
 allow 178.30.200.228;
-allow 179.35.5.78;
 allow 179.43.128.16;
 allow 179.43.159.194;
 allow 179.43.159.195;
@@ -1016,7 +1017,6 @@ allow 23.154.177.31;
 allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
-allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.254;
 allow 23.184.48.78;
@@ -1054,7 +1054,6 @@ allow 2600:3c09::f03c:95ff:fe2d:cc40;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:f704:10::1;
 allow 2602:f9f3:0:2::319;
 allow 2602:fc24:10:61b::1;
@@ -1595,6 +1594,7 @@ allow 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
+allow 2a0d:8140:1fff:4a9a::1;
 allow 2a0d:bbc7:0:1::10a;
 allow 2a0d:bbc7:0:1::1df;
 allow 2a0d:bbc7:0:1::254;
@@ -1730,6 +1730,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.137.99.14;
 allow 45.138.16.107;
 allow 45.138.16.113;
 allow 45.138.16.178;
@@ -1764,8 +1765,6 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
-allow 45.148.10.111;
-allow 45.148.10.169;
 allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
