--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -177,6 +177,7 @@ deny 149.202.79.101;
 deny 149.202.79.129;
 deny 149.56.22.133;
 deny 149.56.44.47;
+deny 152.32.199.79;
 deny 152.53.133.14;
 deny 152.53.53.243;
 deny 154.16.116.61;
@@ -249,6 +250,7 @@ deny 176.58.100.98;
 deny 176.58.121.177;
 deny 176.65.143.138;
 deny 176.97.114.202;
+deny 177.149.142.75;
 deny 178.162.197.91;
 deny 178.17.170.144;
 deny 178.17.171.102;
@@ -262,7 +264,6 @@ deny 178.218.144.51;
 deny 178.218.144.96;
 deny 178.218.144.99;
 deny 178.30.200.228;
-deny 179.35.5.78;
 deny 179.43.128.16;
 deny 179.43.159.194;
 deny 179.43.159.195;
@@ -1016,7 +1017,6 @@ deny 23.154.177.31;
 deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
-deny 23.155.8.104;
 deny 23.184.48.13;
 deny 23.184.48.254;
 deny 23.184.48.78;
@@ -1054,7 +1054,6 @@ deny 2600:3c09::f03c:95ff:fe2d:cc40;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
-deny 2602:2e5::104;
 deny 2602:f704:10::1;
 deny 2602:f9f3:0:2::319;
 deny 2602:fc24:10:61b::1;
@@ -1595,6 +1594,7 @@ deny 2a0c:5700:3133:4000:be24:11ff:fe51:a829;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
+deny 2a0d:8140:1fff:4a9a::1;
 deny 2a0d:bbc7:0:1::10a;
 deny 2a0d:bbc7:0:1::1df;
 deny 2a0d:bbc7:0:1::254;
@@ -1730,6 +1730,7 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
+deny 45.137.99.14;
 deny 45.138.16.107;
 deny 45.138.16.113;
 deny 45.138.16.178;
@@ -1764,8 +1765,6 @@ deny 45.141.215.88;
 deny 45.141.215.90;
 deny 45.141.215.95;
 deny 45.141.215.97;
-deny 45.148.10.111;
-deny 45.148.10.169;
 deny 45.61.185.172;
 deny 45.61.186.203;
 deny 45.61.187.200;
