--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -724,7 +724,6 @@ allow 199.189.27.123;
 allow 199.195.249.214;
 allow 199.195.251.119;
 allow 199.195.253.124;
-allow 199.195.253.156;
 allow 199.195.253.180;
 allow 2001:1af8:4700:a114:6::1;
 allow 2001:1b60:2:1:3935:104:0:1;
@@ -1080,7 +1079,6 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
-allow 2605:6400:10:1362::2;
 allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -1145,7 +1143,6 @@ allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:30:fc99:e3a6:883d:7e1c:1337;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
-allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:1d1::100;
 allow 2605:aa80:0:9::3;
@@ -1312,7 +1309,6 @@ allow 2a03:4000:28:1e8::69;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
-allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -1345,6 +1341,7 @@ allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1625,6 +1622,7 @@ allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc0:0:8::a84e;
 allow 2a0e:bfc0:0:d::d927;
 allow 2a0e:bfc0:0:e::7dc2;
+allow 2a0e:bfc0:0:f::e538;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:3238::1;
@@ -1760,7 +1758,6 @@ allow 45.141.215.88;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
-allow 45.61.185.172;
 allow 45.61.186.203;
 allow 45.61.187.200;
 allow 45.61.188.15;
@@ -1780,7 +1777,6 @@ allow 45.80.158.23;
 allow 45.80.158.27;
 allow 45.80.158.69;
 allow 45.8.22.207;
-allow 45.83.104.137;
 allow 45.83.21.193;
 allow 45.84.107.101;
 allow 45.84.107.128;
@@ -1803,6 +1799,7 @@ allow 45.94.31.68;
 allow 45.95.169.130;
 allow 45.95.169.16;
 allow 45.95.169.230;
+allow 45.95.169.24;
 allow 45.95.169.255;
 allow 46.165.243.36;
 allow 46.195.184.193;
@@ -1830,6 +1827,7 @@ allow 5.230.174.6;
 allow 5.255.100.219;
 allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
