--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -106,7 +106,6 @@ allow 2001:67c:e28:1::4;
 allow 2001:910:1400:107::2;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:3514::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -156,6 +155,7 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
+allow 2605:6400:10:1362::2;
 allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
@@ -220,6 +220,7 @@ allow 2605:6400:30:f91b:8124:6a51:9ea2:5d13;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:30:fc99:e3a6:883d:7e1c:1337;
 allow 2605:6400:40:fde8:11c7:119b:aaf9:2722;
+allow 2605:6400:40:fe09::2;
 allow 2605:6400:d814:1b8::4;
 allow 2605:6400:d814:1d1::100;
 allow 2605:aa80:0:9::3;
@@ -385,6 +386,7 @@ allow 2a03:4000:28:1e8::69;
 allow 2a03:4000:29:8a9:887f:9eff:feed:9e9;
 allow 2a03:4000:2b:66e:dead:beef:ca1f:1337;
 allow 2a03:4000:37:3:e842:2ff:feb9:c49c;
+allow 2a03:4000:46:197:b434:d3ff:fe68:d9e1;
 allow 2a03:4000:48:4d:88c8:8eff:fee8:9d1a;
 allow 2a03:4000:5:65b:388a:15ff:fedc:30d6;
 allow 2a03:4000:6:102b:c457:f3ff:feb0:a6d0;
@@ -394,6 +396,7 @@ allow 2a03:4000:66:15:18a0:6bff:fe90:3147;
 allow 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 allow 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 allow 2a03:4000:7:dcc:14ac:f2ff:fea9:e4c7;
+allow 2a03:6f20:531::254;
 allow 2a03:e600:100::1;
 allow 2a03:e600:100::2;
 allow 2a03:e600:100::3;
